@@ -5,6 +5,7 @@ OpenLDAP 2.4.20 Engineering
 	Fixed slapd debug handling of LDAP_DEBUG_ANY (ITS#6324)
 	Fixed slapd-ldap leak (ITS#6326)
 	Fixed slapo-memberof operational attr updates (ITS#6329)
+	Fixed slapo-syncprov deadlock (ITS#6335)
 	Documentation
 		ldap_get_dn(3) typos (ITS#5366)
 
